--- a/Styles/media.css
+++ b/Styles/media.css
@@ -98,7 +98,7 @@
         display: none;
         flex-direction: column;
 
-        width: 250px;
+        width: 150px;
         padding-bottom: 40px;
 
         background-color: #9d2929;
@@ -109,7 +109,9 @@
     }
     .logo
     {
-
+		display: flex;
+		justify-content: center;
+		margin-left: 55px;
         margin-bottom: 25px;
     }
     .menu-list
@@ -118,12 +120,14 @@
         flex-direction: column;
 		justify-content: center;
 		margin: auto;
+		margin-left: 30px;
         order: 2;
         align-items: center;
     }
     .menu-link
     {
-        margin-right: 0;
+    	margin-left: 0 !important;
+		left: 0;
         margin-bottom: 17px;
     }
     .social
